--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc:
+  reactive_button: 0.0.4
+  dartz:
+  dio:
+  logger:
+  get_it:
 
 
   # The following adds the Cupertino Icons font to your application.
