--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dio:
   logger:
   get_it:
+  shared_preferences: ^2.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
