--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   logger:
   get_it:
   shared_preferences: ^2.3.5
-
+  flutter_svg:
+  fan_carousel_image_slider:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/vectors/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
