--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc:
-  reactive_button: 0.0.4
+  reactive_button: ^0.0.4
   dartz:
   dio:
   logger:
@@ -39,8 +39,8 @@ dependencies:
   shared_preferences: ^2.3.5
   flutter_svg:
   fan_carousel_image_slider:
-  firebase_core:
-  firebase_auth:
+  firebase_core: ^3.10.0
+  firebase_auth: ^5.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
